Fixed themeIcon disappearing on mobile

--- a/digtalwebsite/client/digtalwebsite/src/assets/sass/layout/_navbar.scss
+++ b/digtalwebsite/client/digtalwebsite/src/assets/sass/layout/_navbar.scss
@@ -17,7 +17,7 @@
    animation: animate-navbar 0.5s ease-in-out;
 
    animation-iteration-count: 1;
-   background-color: white;
+   background-color: rgb(11, 10, 10);
 
    // // /controlling highlighter
    &>* a::selection,   *::selection{
@@ -216,11 +216,12 @@
                display: none;
             }
 
-            .navbar-theme-dark {
-               display: inline-block;
-               // fill: red;
-               transform: scale(0.8);
-            }
+            // .navbar-theme-dark,.navbar-theme-dark {
+            //    display: inline-block;
+            //    fill: red;
+            //    stroke: red;
+            //    // transform: scale(0.8);
+            // }
          }
 
          //theme
